contrib/kubernetes/frepple-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frepple
    frepple.network: "true"
  name: frepple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frepple
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frepple
    spec:
      containers:
        - env:
            - name: POSTGRES_HOST
              value: frepple-postgres
            - name: POSTGRES_PASSWORD
              value: frepple
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_USER
              value: frepple
            - name: POSTGRES_DBNAME
              value: freppledb
          image: ghcr.io/frepple/frepple-community:latest
          name: frepple-webserver
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "2"
              memory: "4294967296"
            requests:
              cpu: 250m
              memory: "4294967296"
          volumeMounts:
            - mountPath: /etc/frepple
              name: config-frepple
            - mountPath: /var/log/apache2
              name: log-apache
            - mountPath: /var/log/frepple
              name: log-frepple
      restartPolicy: Always
      volumes:
        - name: config-frepple
          persistentVolumeClaim:
            claimName: config-frepple
        - name: log-apache
          persistentVolumeClaim:
            claimName: log-apache
        - name: log-frepple
          persistentVolumeClaim:
            claimName: log-frepple
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frepple
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: frepple
status:
  loadBalancer: {}
